# developer-landing-presentations

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff  ruff.cmd
.github/workflows/: ci.yml
app/config/: exceptions.py  logging.py  middleware.py  settings.py  urls.py
app/config/tests/: test_docs.py
app/contacts/: ai.py  emails.py  models.py  serializers.py  services.py  throttling.py  views.py
app/contacts/migrations/: 0001_initial.py
app/contacts/tests/: test_ai.py  test_api.py
scripts/: docker-up.ps1
